# moonshine

./: .editorconfig  .env.example  .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prototools  .renovate.json  AGENTS.md  ARCHITECTURE_CURRENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSION_PATTERNS.md  Cargo.toml  DEPLOYMENT_FINAL.md  FINAL_ARCHITECTURE.md  HYBRID_ARCHITECTURE.md  INTEGRATION_STATUS.md  MASTER_CONVERSION_TEMPLATE.md  MOON_PDK_COMPILATION_SUCCESS.md  MOON_PDK_STATUS.md  OXC_RULE_TEMPLATE.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_ROADMAP.md  README.md  RULES_ECOSYSTEM.md  RULE_CONVERSION_GUIDE.md  RULE_MIGRATION_GUIDE.md  SECURITY.md  SOLUTION_SUMMARY.md  SUNLINTER_PLUS_PLUS.md  TESTING.md  TESTING_SUMMARY.md  TODO_VERIFICATION.md  ULTRA_ARCHITECTURE.md  WORKFLOW_STEPS_ANALYSIS.md  WORKING_EXAMPLE.md  agents.md  (+20 more)
.cargo/: config.toml
.direnv/: flake-profile-2-link  flake-profile-3-link  flake-profile-8-link
.github/workflows/: build-and-test.yml  copilot-setup-steps.yml  release.yml
.moon/: workspace.yml
defaults/: patterns.json  prompts.json  providers.json
deployment/: build-script.sh  monitoring.sh  package.sh  test-extension.sh
docs/: AI_PROVIDER_INTERFACE_SPECIFICATION.md  AI_SUPPORTED_LINTER_ARCHITECTURE.md  ARCHITECTURAL_ISSUES_ANALYSIS.md  ARCHITECTURAL_ISSUES_SUMMARY.md  ARCHITECTURE_ACTION_ROADMAP.md  ARCHITECTURE_ANALYSIS_INDEX.md  ARCHITECTURE_GAPS_DIAGRAM.md  DEVELOPER_GUIDE.md  INTEGRATION_STATUS.md  MIGRATION_GUIDE.md  USER_GUIDE.md  ai-enhanced-rules-usage.md  ai-linter-architecture.md  ai_linting_implementation_summary.md  implementation-roadmap.md  rulebase-integration-plan.md
examples/: metasignature_quick_demo.rs  test_workflow.rs
moonshine-rules/: README.md  index.js
moonshine-rules/common/: c002-no-duplicate-code.js  c003-no-vague-abbreviations.js  c010-limit-block-nesting.js  c013-no-dead-code.js  c023-no-duplicate-variable-name-in-scope.js  c047-no-duplicate-retry-logic.js
moonshine-rules/docs/: C002_no_duplicate_code.md
moonshine-rules/migration/: mapping.json
moonshine-rules/parser/: constants.js  rule-parser-simple.js
moonshine-rules/quality/: t002-interface-prefix-i.js  t003-ts-ignore-reason.js  t007-no-fn-in-constructor.js  t019-no-this-assign.js  t020-no-default-multi-export.js
moonshine-rules/security/: s001-fail-securely.js  s002-idor-check.js  s007-no-plaintext-otp.js  s008-crypto-agility.js  s011-no-insecure-uuid.js  s012-hardcode-secret.js  s015-insecure-tls-certificate.js  s016-sensitive-query-parameter.js  s017-no-sql-injection.js  s019-no-raw-user-input-in-email.js  s020-no-eval-dynamic-execution.js  s023-no-json-injection.js  s026-json-schema-validation.js  s030-no-directory-browsing.js  s033-require-samesite-cookie.js  s034-require-host-cookie-prefix.js  s035-cookie-specific-path.js  s036-no-unsafe-file-include.js  s038-no-version-disclosure.js  s042-require-periodic-reauthentication.js  s044-require-full-session-for-sensitive-operations.js  s047-secure-random-passwords.js  s048-password-credential-recovery.js  s050-session-token-weak-hash.js  s052-secure-random-authentication-code.js  s054-verification-default-account.js  s057-utc-logging.js  s058-no-ssrf.js
moonshine-rules/utils/: base-analyzer.js  rule-helpers.js  severity-constants.js
rulebase/: README.md
rulebase/examples/: eslint-moonshine-example.config.js
rulebase/generators/: generate-full-rulebase.js
rulebase/output/: moonshine-rulebase-complete.json
rulebase/presets/: README.md  development-friendly.json  enterprise-strict.json  performance-optimized.json  security-critical.json  typescript-strict.json
rulebase/schemas/: rule-schema.json
scripts/: build-extension.sh  convert_sunlinter_rules.rs  generate-moonshine-rule-registry.mjs  install-extension.sh  manage_github_token.sh  test-extension.sh  test-wasm.sh
src/: adaptive_rule_system.rs  adaptive_workflow_planner.rs  ai_assistance.rs  ai_behavioral.rs  ai_behavioral_strategy.rs  ai_code_fixer.rs  analysis.rs  analysis_pipeline.rs  code_analyzer.rs  complete_ai_architecture.rs  complexity.rs  config.rs  cost_aware_ai_orchestrator.rs  custom_rule_generator.rs  data.rs  engine.rs  error.rs  extension.rs  four_layer_ai_architecture.rs  hybrid_linter.rs  installation.rs  integration_tests.rs  internal_toolchain.rs  javascript_typescript_linter.rs  lib.rs  linter.rs  message_types.rs  moon_host.rs  moon_log.rs  moon_pdk_interface.rs  multi_language_analyzer.rs  oxc_accessibility_i18n_rules.rs  oxc_advanced_frameworks_rules.rs  oxc_api_integration_rules.rs  oxc_ar_vr_development_rules.rs  oxc_bestpractices_rules.rs  oxc_blockchain_web3_rules.rs  oxc_build_tool_rules.rs  oxc_complexity_rules.rs  oxc_data_science_ml_rules.rs  (+49 more)
src/code_analyzer/: analysis_types.rs  analyzer_engine.rs  complexity_metrics.rs  config_types.rs  mod.rs  security_analysis.rs
src/config/: compiled_schema.rs  defaults.rs  mod.rs
src/dspy/: examples.rs  mod.rs  signature_demo.rs  signature_macro.rs  tests.rs  utils.rs
src/engine/: engine_core.rs  engine_full.rs  mod.rs
src/eslint_adapter/: context.rs  execution.rs  mod.rs  rule_mapping.rs  rules.rs  utils.rs  visitor.rs
src/linter/: ai_linter_core.rs  ai_linter_full.rs  mod.rs  pattern_matcher.rs  pattern_types.rs
src/oxc_adapter/: adaptive_pattern_analyzer.rs  ai_behavioral.rs  mod.rs  moon_integration.rs  multi_engine_analyzer.rs  (+5 more)
sunlint/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  cli.js  package.json
tests/: README.md  ai_behavioral_analysis_tests.rs  ai_edge_case_tests.rs  ai_enhanced_rules_integration.rs  ai_linting_end_to_end_tests.rs  ai_linting_integration_test.rs  ai_load_and_wasm_tests.rs  ai_performance_benchmarks.rs  ai_property_based_tests.rs  ai_provider_router_tests.rs  ai_snapshot_and_fixtures_tests.rs  chicago_style_units.rs  e2e_workflow_tests.rs  hybrid_linter.rs  integration_test.rs  linter_tests.rs  london_style_mocked.rs  moon_integration_test.rs  oxc_rule_template_test.rs  property_based_tests.rs  wasm_safe_linter.rs
(+496 files in other folders)
